# topic_engine

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  env-example  manage.py  pyproject.toml  pytest.ini  refresh_test_db  requirements.txt  topic_engine_management_commands.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
core/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  views.py
core/fixtures/: initial_model_configs.json  initial_topics.json
core/logging/: logger.py
core/migrations/: 0001_initial.py  0002_alter_source_name.py  0003_source_error_log.py  0004_alter_content_url.py  0005_remove_topicscore_classification_date_and_more.py  0006_modelconfig_last_trained_and_more.py  0007_alter_modelconfig_parameters.py  0008_remove_topic_model_config_remove_topic_model_metrics_and_more.py  0009_modelconfig_active.py  0010_modelconfig_slug_source_slug_alter_topic_path_and_more.py
core/static/js/: menu.js
scripts/: create_db  setup_test_db  setup_test_db.sh
sources/: forms.py  scheduler.py  services.py  views.py
sources/fetching/: __init__.py  config.py  fetcher.py  strategy.py  types.py
sources/fetching/strategies/: __init__.py  archive.py  base.py  browser.py  simple.py
sources/management/commands/: check_feeds.py  import_opml.py  run_scheduler.py
sources/tests/: conftest.py  test_feed_processor.py  test_scheduler.py
templates/: base.html  nav.html
templates/admin/core/source/: opml_upload.html
templates/core/: all_articles.html  base.html  home_list.html  modelconfig_confirm_delete.html  modelconfig_detail.html  modelconfig_form.html  modelconfig_list.html  source_list.html  topic_list.html
templates/sources/: article_detail.html  article_list.html  base.html  source_confirm_delete.html  source_detail.html  source_form.html  source_list.html
templates/topics/: topic_confirm_delete.html  topic_detail.html  topic_form.html  topic_list.html
topics/: admin.py  forms.py  models.py  views.py
topics/management/commands/: predict_topics.py  predict_topics.py.bak  train_setfit_model.py  update_training_data.py
topics/training_data/accidents/: irrelevant.txt  relevant.txt
