[project]
name = "topic_engine"
version = "0.1.0"
description = "Topic detection and content processing engine"
requires-python = ">=3.12"
dependencies = [
    
    # Web Framework
    "Django>=5.1.3",
    "django-extensions>=3.2.3",
    "python-decouple>=3.8",

    # Database
    "psycopg2-binary>=2.9.10",
    
    # ML/AI
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "sentence-transformers>=3.3.1",
    "setfit>=1.1.0",
    "torch>=2.5.1",
    "transformers>=4.42.2",
    
    # Web Scraping
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "playwright>=1.49.0",
    "requests>=2.32.3",
    "requests-html>=0.10.0",
    "trafilatura>=1.12.2",
    
    # Date/Time
    "dateparser>=1.2.0",
    "python-dateutil>=2.9.0",
    
    # Utilities
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ipython>=8.29.0",
    "pytest>=8.3.3",
    "pytest-django>=4.9.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.3.0",
    "Werkzeug>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "config/*",
    "content/*",
    "core/*",
    "output/*",
    "sources/*",
    "topics/*",
    "manage.py",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
extend-select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.uv.workspace]
members = ["mcp_server"]
